--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rest-api-bsale",
   "version": "1.0.0",
   "description": "",
-  "main": "../src/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
