--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "node index.js"
+    "start": "node ../index.js",
+    "dev": "node ../index.js"
   },
   "author": "",
   "license": "ISC"
